# counter_retrofiting

./: .gitignore  README.md  main.py  pyproject.toml
app/: main.py
app/templates/: config.html  index.html
core/: processor.py
scripts/: capture_and_read.py
