[project]
name = "counter-retrofiting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "google-genai>=1.62.0",
    "numpy>=2.4.2",
    "opencv-python-headless>=4.13.0.92",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.1",
]
